# CryptoKeeper

./: .gitignore  Cargo.toml  MIGRATION_SUMMARY.md  README.md
.github/workflows/: release.yml
docs/: index.html
src/: cli.rs  clipboard.rs  error.rs  main.rs  terminal.rs
src/commands/: add.rs  config_cmd.rs  copy.rs  delete.rs  derive.rs  edit.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  passwd.rs  recover.rs  rename.rs  search.rs  view.rs
src/config/: mod.rs  model.rs  storage.rs
src/crypto/: cipher.rs  derive.rs  entry_key.rs  kdf.rs  mod.rs  recovery.rs  secure.rs
src/repl/: input.rs  mod.rs
src/ui/: app.rs  borders.rs  header.rs  mod.rs  prompt.rs  terminal.rs  theme.rs
src/ui/screens/: add_entry.rs  confirm.rs  edit_entry.rs  input.rs  login.rs  mod.rs  recovery.rs  recovery_setup.rs  settings.rs  view_entry.rs  wizard.rs
src/ui/widgets/: dashboard.rs  entry_table.rs  menu_bar.rs  password_field.rs  status_bar.rs
src/vault/: model.rs  storage.rs
